# py-mexc-api

./: .gitignore  .pylintrc  .readthedocs.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  enums.md  exceptions.md  index.md  spot.md  websocket_stream.md
docs/source/endpoints/: etf.md  market copy.md  market.md  rebate.md  sub_account.md  wallet.md
mexc_api/common/: api.py  enums.py  exceptions.py  utils.py
mexc_api/spot/: __init__.py
mexc_api/spot/endpoints/: _account.py  _etf.py  _market.py  _rebate.py  _sub_account.py  _wallet.py
mexc_api/websocket/: __init__.py  mexc_websocket_app.py  websocket_stream.py
