[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mexc-api"
version = "0.0.2"
authors = [
  { name="Floris272", email="florispuijk@outlook.com" },
]
description = "A wrapper for the Mexc rest and websocket api."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests >= 2.31.0",
    "websocket-client >= 1.6.1"
]

[project.urls]
"Homepage" = "https://github.com/Floris272/py-mexc-api"
"Bug Tracker" = "https://github.com/Floris272/py-mexc-api/issues"